2007-08-23  Sven Schober <sschober@suse.de>
	* src/pam-config.c: CONFDIR customizable via cmd line
	option.
	* src/pam-config.c: Gather return values from write_config()
	invocations, and return failure in case a single one fails.
	* src/pam-config.h: -- " --
	* src/mod_pam_thinkfinger.c: Heed --confdir option. 
	* src/single_config.c: -- " --
	* src/mod_pam_mount.c: -- " -- 
	* tests/: New testsuite. See tests/README for usage.

2007-08-14  Sven Schober <sschober@suse.de>
	* release version 0.23
	* src/pam-config.8.xml: Added documentation for
	pam_thinkfinger.so
	* src/mod_pam_thinkfinger.c: New.
	* src/pam-config.c: Added options for pam_thinkfinger.so.
	* src/mod_pam_mount.c: Added mutex with pam_thinkfinger.so.
	* src/supported-modules.h: Added pam_thinkfinger.so to
	common_module_list and auth stack.
	* src/write_config.c: Fix bug, where write_config() would
	not gather correct result from module->write_config()
	invocations.
	* src/Makefile.am: Added mod_pam_thinkfinger.c.

2007-08-14  Sven Schober <sschober@suse.de>
	* release version 0.22

2007-08-09  Sven Schober <sschober@suse.de>
	* src/mod_pam_ck_connector.c: Check return value of
	asprintf.
	* src/pam-config.h: Adapted documentation to reflect changes
	to insert_if().
	* src/mod_pam_cryptpass.c: Fixed write_config_cryptpass to
	retrieve both SESSION and PASSWORD option sets. This enables
	us to treat the two stack types differently.
	* src/pam-config.c: Added option --cryptpass-password. 
	* src/single_config.c: sanitized insert_if() return value.
	* src/pam-config.8.xml: Adapted manpage.

2007-08-07  Sven Schober <sschober@suse.de>
	* src/pam-module.h: Externalized service_module_list, so
	single service modules are able to check for other modules.
	* src/single_config.c: Refactored list operations on
	config_content_t lists. Added remove_module() function,
	insert_if() takes position hint as last parameter.
	* src/pam-config.h: Reflect signature change of insert_if()