@@ -137,21 +137,36 @@ check_symlink (const char *old, const char *new)
     }
 }
 
-/* make backup from original file and symlink autogenerated one
-   to the original name.  */
+/* if 'file' exists, make backup from original file. symlink
+ * autogenerated one to the original name.  
+ */
 static int
 relink (const char *file, const char *file_pc, const char *file_bak)
 {
-  if (link (file, file_bak) != 0 ||
-      unlink (file) != 0 ||
-      symlink (file_pc, file) != 0)
-	{
-	  fprintf (stderr,
-		   _("Error activating %s (%m)\n"), file);
-	  fprintf (stderr,
-		   _("New config from %s is not in use!\n"), file_pc);
-	  return 1;
-	}
+  if (0 == access (file, F_OK))
+  {
+    if (link (file, file_bak) != 0 ||
+	unlink (file) != 0 ||
+	symlink (file_pc, file) != 0)
+    {
+      fprintf (stderr,
+	  _("Error activating %s (%m)\n"), file);
+      fprintf (stderr,
+	  _("New config from %s is not in use!\n"), file_pc);
+      return 1;
+    }
+  }
+  else
+  {
+    if (symlink (file_pc, file) != 0)
+    {
+      fprintf (stderr,
+	  _("Error activating %s (%m)\n"), file);
+      fprintf (stderr,
+	  _("New config from %s is not in use!\n"), file_pc);
+      return 1;
+    }
+  }
   return 0;
 }
 
