@@ -1,0 +1,1 @@
+ERROR: Module pam_thinkfinger.so is enabled. Disable it first.
