@@ -1,0 +1,8 @@
+1
+#%PAM-1.0
+auth     include        common-auth
+account  include        common-account
+password include        common-password
+session  required	pam_loginuid.so	
+session  include        common-session
+session  required       pam_resmgr.so
